# Phase0_angel_one_bot

./: .env.example  .gitignore  .jwt_token  CLAUDE.md  Cargo.toml  NEXT_STEPS.md  SYSTEM_OVERVIEW.md  docker-compose.yml  k.md  log.txt  log2.txt  setup.md  test.ipynb
adapter_angelone/: Cargo.toml
adapter_angelone/src/: auth.rs  config.rs  data.rs  decode.rs  execution.rs  factories.rs  lib.rs
adapter_angelone/tests/: e2e.rs
backtest/: Cargo.toml
backtest/src/: main.rs
circuit_breaker/: Cargo.toml
circuit_breaker/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  parser.rs  schema.rs
config/: nse_risk.toml  strategy_basis_arb.toml  strategy_intraday_vwap.toml  trading.toml
data/raw/2026/05/11/: 1594.parquet  26009.parquet  3351.parquet  7229.parquet
data/raw/2026/05/12/: 1594.parquet  26009.parquet  3351.parquet  7229.parquet
data/raw/2026/05/13/: 1594.parquet  26009.parquet  3351.parquet  57515.parquet  7229.parquet
data/raw/2026/05/14/: 1594_1778733306850.parquet  1594_1778736966897.parquet  1594_1778740626998.parquet  1594_1778744287087.parquet  1594_1778747947127.parquet  1594_1778787643386.parquet  26009_1778733306850.parquet  26009_1778736966897.parquet  26009_1778740626998.parquet  26009_1778744287087.parquet  26009_1778747947127.parquet  26009_1778787643386.parquet  3351_1778733306850.parquet  3351_1778736966897.parquet  3351_1778740626998.parquet  3351_1778744287087.parquet  3351_1778747947127.parquet  3351_1778787643386.parquet  66071_1778733306850.parquet  66071_1778736966897.parquet  66071_1778740626998.parquet  66071_1778744287087.parquet  66071_1778747947127.parquet  66071_1778787643386.parquet  7229_1778733306850.parquet  7229_1778736966897.parquet  7229_1778740626998.parquet  7229_1778744287087.parquet  7229_1778747947127.parquet
data/raw/2026/05/15/: 1594_1778815654054.parquet  1594_1778816738927.parquet  1594_1778820358383.parquet  1594_1778824018482.parquet  1594_1778827678540.parquet  1594_1778864205056.parquet  26009_1778815654054.parquet  26009_1778816738927.parquet  26009_1778820358383.parquet  26009_1778824018482.parquet  26009_1778827678540.parquet  26009_1778864205056.parquet  3351_1778815654054.parquet  3351_1778816738927.parquet  3351_1778820358383.parquet  3351_1778824018482.parquet  3351_1778827678540.parquet  3351_1778864205056.parquet  66071_1778815654054.parquet  66071_1778816738927.parquet  66071_1778820358383.parquet  66071_1778824018482.parquet  66071_1778827678540.parquet  66071_1778864205056.parquet  7229_1778816738927.parquet  7229_1778820358383.parquet  7229_1778824018482.parquet  7229_1778827678540.parquet  7229_1778864205056.parquet
data/raw/2026/05/17/: 26009_1778991990004.parquet  3351_1778991990004.parquet  66071_1778991990004.parquet
data/raw/2026/05/18/: 1594_1779079261524.parquet  26009_1779079261524.parquet  3351_1779079261524.parquet  66071_1779079261524.parquet  7229_1779079261524.parquet
ingestion/: Cargo.toml
ingestion/src/: auth.rs  main.rs  websocket.rs
knowledge/: INDEX.md  PHASE_1_CHECKLIST.md  README.md  glossary.md
knowledge/adr/: ADR-001-event-bus-design.md  ADR-002-storage-architecture.md  ADR-003-circuit-breaker-isolation.md  ADR-004-order-book-representation.md  ADR-005-replay-determinism.md  ADR-006-execution-engine-isolation.md  ADR-007-nautilus-trader-foundation.md
knowledge/agents/: performance_auditor.md  reviewer.md  risk_engineer.md  rust_engineer.md  strategy_engineer.md
knowledge/domain/: exchange_protocols.md  latency_budget.md  market_microstructure.md  nse_fo_specifics.md
knowledge/examples/: circuit_breaker_lifecycle.md  replay_session.md  signal_to_fill_flow.md  tick_ingestion_flow.md
knowledge/runtime/: event_bus.md  execution_engine.md  order_book.md  replay_engine.md  risk_engine.md  state_engine.md  strategy_engine.md
knowledge/standards/: event_contracts.md  observability.md  rust_patterns.md  testing_strategy.md
knowledge/vision/: design_principles.md  system_philosophy.md
risk_nse/: Cargo.toml
risk_nse/src/: config.rs  lib.rs
risk_nse/src/checks/: freeze_qty.rs  lot_size.rs  mod.rs  physical_settlement.rs  stt_trap.rs
scripts/: export_questdb_to_parquet.py  run_trading.ps1  stop_trading.ps1
storage/: Cargo.toml
storage/src/: lib.rs  parquet_sink.rs  questdb_sink.rs
strategy_basis_arb/: Cargo.toml
strategy_basis_arb/src/: config.rs  lib.rs  rolling_basis.rs  strategy.rs
strategy_basis_arb/tests/: integration.rs
strategy_intraday_vwap/: Cargo.toml
strategy_intraday_vwap/src/: config.rs  lib.rs  strategy.rs  vwap.rs
trading/: Cargo.toml
trading/src/: main.rs
