[package]
name = "circuit_breaker"
version = "0.1.0"
edition = "2021"
description = "Isolated kill-switch process: monitors heartbeat and PnL, triggers emergency exit"

[dependencies]
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
zeromq = { version = "0.4", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
