[package]
name = "strategy_intraday_vwap"
version = "0.1.0"
edition = "2021"
description = "VWAP mean-reversion intraday strategy for NSE equity stocks"

[dependencies]
anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tracing     = "0.1"
chrono      = { version = "0.4", features = ["clock"] }
chrono-tz   = "0.10"
ustr        = "1.1"

nautilus-model   = { workspace = true }
nautilus-common  = { workspace = true }
nautilus-core    = { workspace = true }
nautilus-trading = { workspace = true }

[dev-dependencies]
nautilus-backtest = { workspace = true }
