[package]
name = "trading"
version = "0.1.0"
edition = "2021"
description = "LiveTradingNode binary — wires Angel One adapter + basis-arb strategy + NSE risk checks"

[[bin]]
name = "trading"
path = "src/main.rs"

[dependencies]
adapter_angelone    = { path = "../adapter_angelone" }
strategy_basis_arb  = { path = "../strategy_basis_arb" }
strategy_intraday_vwap = { path = "../strategy_intraday_vwap" }
risk_nse            = { path = "../risk_nse" }
common              = { path = "../common" }

nautilus-model   = { workspace = true }
nautilus-common  = { workspace = true, features = ["live"] }
nautilus-core    = { workspace = true }
nautilus-live    = { workspace = true, features = ["node"] }
nautilus-trading = { workspace = true }

anyhow      = "1"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio       = { version = "1", features = ["full"] }
dotenvy     = "0.15"
zeromq      = { version = "0.4", features = ["tokio-runtime"] }
chrono      = { version = "0.4", features = ["clock"] }
serde_json  = "1"
